--- a/index.html
+++ b/index.html
@@ -127,9 +127,22 @@
           <a href="#" class="fa-brands fa-instagram"></a>
           <a href="#" class="fa-brands fa-slack"></a>
         </div>
+        <div class="separator-line"></div>
       </div>
-      <div class="row-small">
-        <img src="./images/logo-white.png" alt="logo-white" />
+      <div class="row-small footer__copyright">
+        <img src="./images/logo-white.png" alt="logo-white" class="footer__logo" />
+        <div class="footer__description">
+          <p>
+            Copyright &copy; 2016 <a href="#">Matrox</a> | All Rights Reserved | Designed
+            By
+            <a href="#">TrendyTheme</a>
+          </p>
+          <p>
+            Matrox pack includes complete websites not just homepages, it comes with full
+            website demos. Over <a href="#">200+</a> rady html files only for 17$.
+            Purchase <a href="#">Matrox</a> Now!
+          </p>
+        </div>
       </div>
     </footer>
   </body>
