--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       src="https://kit.fontawesome.com/5d415a95af.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./app.js"></script>
   </head>
   <body>
     <!-- HERO SECTION -->
@@ -29,7 +30,7 @@
       <div class="row-small">
         <img src="./images/logo.png" alt="logo" class="hero__logo" />
 
-        <div class="container heading">
+        <div class="heading">
           <h1 class="heading__title">COMING SOON</h1>
           <div class="heading__subheading">
             <p>An awesome new company for web resources is coming very soon.</p>
@@ -50,7 +51,7 @@
 
           <div>
             <p id="minutes">37</p>
-            <p>HOURS</p>
+            <p>MINUTES</p>
           </div>
 
           <div>
@@ -112,6 +113,8 @@
             <button class="btn btn-submit">Send Message</button>
           </form>
         </div>
+
+        <a href="#hero" class="btn btn-scroll fa-solid fa-chevron-up"></a>
       </div>
     </section>
 
