--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
               <p>90%</p>
             </div>
             <div class="progress__bar-container">
-              <div
-                class="progress__bar"
-                style="animation: loading-90 1.5s 0.5s forwards"
-              ></div>
+              <div class="progress__bar" style="width: 90%"></div>
             </div>
           </div>
 
@@ -101,10 +98,7 @@
               <p>86%</p>
             </div>
             <div class="progress__bar-container">
-              <div
-                class="progress__bar"
-                style="animation: loading-86 1.5s 0.5s forwards"
-              ></div>
+              <div class="progress__bar" style="width: 86%"></div>
             </div>
           </div>
 
@@ -114,10 +108,7 @@
               <p>50%</p>
             </div>
             <div class="progress__bar-container">
-              <div
-                class="progress__bar"
-                style="animation: loading-50 1.5s 0.5s forwards"
-              ></div>
+              <div class="progress__bar" style="width: 50%"></div>
             </div>
           </div>
         </div>
