Add Animation on Scroll

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <p>90%</p>
             </div>
             <div class="progress__bar-container">
-              <div class="progress__bar" style="width: 90%"></div>
+              <div id="bar-1" class="progress__bar" style="width: 90%"></div>
             </div>
           </div>
 
@@ -98,7 +98,7 @@
               <p>86%</p>
             </div>
             <div class="progress__bar-container">
-              <div class="progress__bar" style="width: 86%"></div>
+              <div id="bar-2" class="progress__bar" style="width: 86%"></div>
             </div>
           </div>
 
@@ -108,7 +108,7 @@
               <p>50%</p>
             </div>
             <div class="progress__bar-container">
-              <div class="progress__bar" style="width: 50%"></div>
+              <div id="bar-3" class="progress__bar" style="width: 50%"></div>
             </div>
           </div>
         </div>
